# CXX

./: cmake_console_guide.txt
cmake-demo-project/: CMakeLists.txt
cmake-demo-project/demolib/: CMakeLists.txt  main.cpp
cmake-demo-project/demolib/inc/: demolib.h
cmake-demo-project/demoprog/: CMakeLists.txt  main.cpp
cmake-demo-project/tests/: CMakeLists.txt  test1.cpp  test2.cpp
git-demo-project/: README.md
task_1/: CMakeLists.txt  main.cpp
task_2/: CMakeLists.txt  main.cpp
task_3/: CMakeLists.txt  main.cpp
task_4/: CMakeLists.txt  main.cpp
task_5/: CMakeLists.txt  Vector3D.cpp  Vector3D.h  main.cpp  outfile.txt  vector_sum.txt
task_6/: CMakeLists.txt  command_file.txt  input_file.txt  main.cpp
task_6/List/: CMakeLists.txt  List.cpp  List.h
task_6/tests/: CMakeLists.txt  test_add.cpp  test_count.cpp  test_remove_name.cpp  test_remove_value.cpp  test_search_name.cpp  test_search_value.cpp
task_7/: CMakeLists.txt  README.md  contacts_matrix.txt  main.cpp  matrix100.txt  numbers100.txt  population_numbers.txt
task_7/Population/: CMakeLists.txt  Diseased.cpp  Diseased.h  Healthy.cpp  Healthy.h  Infected.cpp  Infected.h  Person.h  Recovered.cpp  Recovered.h
task_8/: CMakeLists.txt  main.cpp  some_text.txt
task_9/: CMakeLists.txt  TupleN.h  float_file.txt  int_file.txt  main.cpp  string_file.txt
