cmake_minimum_required(VERSION 3.4)
project(list_tests)

add_executable(list_test_1 test_add.cpp)
target_link_libraries(list_test_1 List)
add_executable(list_test_2 test_remove_value.cpp)
target_link_libraries(list_test_2 List)
add_executable(list_test_3 test_remove_name.cpp)
target_link_libraries(list_test_3 List)
add_executable(list_test_4 test_search_value.cpp)
target_link_libraries(list_test_4 List)
add_executable(list_test_5 test_search_name.cpp)
target_link_libraries(list_test_5 List)
add_executable(list_test_6 test_count.cpp)
target_link_libraries(list_test_6 List)

add_test(NAME test_add COMMAND list_test_1)
add_test(NAME test_remove_value COMMAND list_test_2)
add_test(NAME test_remove_name COMMAND list_test_3)
add_test(NAME test_search_value COMMAND list_test_4)
add_test(NAME test_search_name COMMAND list_test_5)
add_test(NAME test_count COMMAND list_test_6)